# flask_prj

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt  wsgi.py
blog/: admin.py  app.py  db.sqlite
blog/api/: __init__.py  post.py  tag.py  user.py
blog/auth/: views.py
blog/authors/: views.py
blog/forms/: post.py  user.py
blog/models/: __init__.py  author.py  post.py  post_tag.py  tag.py  user.py
blog/permissions/: user.py
blog/post/: views.py
blog/schemas/: __init__.py  author.py  post.py
blog/templates/: base.html  navbar.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/post/: create.html  details.html  list.html  list_api.html  tag_details.html  tag_list.html
blog/templates/user/: details.html  list.html
blog/user/: views.py
migrations/versions/: 73637abcabc6_update_user_model.py  76956488a3ed_.py  7e1c8ed621e7_add_email_field_to_user_model.py  a38f68cdce75_.py  de769d2382d5_.py
